<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservaTurnosActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/tv_titulo_reserva"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_titulo_reserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/registro_de_reservas"/>

    <TextView
        android:id="@+id/tv_filtrar_por"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_reserva"
        android:layout_marginStart="3dp"
        android:text="@string/filtrar_por"/>

    <RadioGroup
        android:id="@+id/rg_filtrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrar_por"
        android:layout_marginTop="3dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empleado"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"/>

    </RadioGroup>

    <EditText
        android:id="@+id/et_fecha_desde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg_filtrado"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/fecha_desde"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/et_fecha_hasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_fecha_desde"
        app:layout_constraintStart_toEndOf="@id/et_fecha_desde"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/fecha_hasta"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_filtrado"
        android:layout_marginEnd="20dp"
        android:text="@string/buscar"
        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reserva"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>